@@ -3,7 +3,7 @@
 	Plugin Name: Yotpo Social Reviews for Woocommerce
 	Description: Yotpo Social Reviews helps Woocommerce store owners generate a ton of reviews for their products. Yotpo is the only solution which makes it easy to share your reviews automatically to your social networks to gain a boost in traffic and an increase in sales.
 	Author: Yotpo
-	Version: 1.0.6
+	Version: 1.0.7
 	Author URI: http://www.yotpo.com?utm_source=yotpo_plugin_woocommerce&utm_medium=plugin_page_link&utm_campaign=woocommerce_plugin_page_link	
 	Plugin URI: http://www.yotpo.com?utm_source=yotpo_plugin_woocommerce&utm_medium=plugin_page_link&utm_campaign=woocommerce_plugin_page_link
  */
@@ -125,13 +125,20 @@ function wc_yotpo_show_widget_in_tab($tabs) {
 }
 
 function wc_yotpo_load_js(){
-	if(wc_yotpo_is_who_commerce_installed()) {		
-    	wp_enqueue_script( 'yquery', 'https://www.yotpo.com/js/yQuery.js',null,null);    	
+	if(wc_yotpo_is_who_commerce_installed()) {
+        wp_enqueue_script( 'yquery', plugins_url('assets/js/headerScript.js', __FILE__) ,null,null);
 	}
 }
 
 function wc_yotpo_is_who_commerce_installed() {
 	return in_array('woocommerce/woocommerce.php', apply_filters('active_plugins', get_option('active_plugins')));
+}
+
+function wc_yotpo_show_qa_buttomline() {
+    $product_data = wc_yotpo_get_product_data(get_product());
+    echo "<div class='yotpo QABottomLine'
+         data-appkey='".$product_data['app_key']."'
+         data-product-id='".$product_data['id']."'></div>";
 }
 
 function wc_yotpo_show_buttomline() {
