@@ -121,3 +121,9 @@ Alon
 Alon 
 1) Add support to Tab manager extension.
 2) Bug fix in removing native review system.
+
+2014-01-09
+----
+Nimrod
+1) Added b2c2b registration support.
+2) Load yQuery asynchronously.
